updated portfolio page and links

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Slabo+27px&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style1.css">
 
     <title>Bethany Polovitz</title>
@@ -14,12 +14,14 @@
 
 <body>
     <div class="jumbotron"
-        style="background-image: url(./ProfilePhotos/rome.jpg) ; background-size: cover; background-repeat: no-repeat; padding: 120px 32px; opacity: 0.70;">
+        style="background-image: url(./ProfilePhotos/rome.jpg) ; background-size: cover; background-repeat: no-repeat; padding: 120px 32px; opacity: 0.75;">
 
-        <h1 class="name"> <span style="color: white; font-weight: bold;"> Bethany
+        <h1 class="name"> <span style="color: white;"> Bethany
                 Polovitz</span></h1>
+                <p>Full-Stack Developer</p>
                 <p><a href="https://www.linkedin.com/in/bethany-polovitz-66b18859/" style="color: white;">Linkedin Profile</a>
                 <a href="https://github.com/bpolo15" style="color: white;">- GitHub Page </a>
+                <a href ="./ProfilePhotos/2020 - Bethany Polovitz - Resume .pdf" style="color: white;">- Resume</a>
             </p>
             <p>
                 <a href="portfolio.html" class="btn btn-dark" role="button" aria-pressed="true">Go to Portfolio</a></p>
@@ -34,7 +36,7 @@
             <div class="col-lg-6 col-md-12 col-sm-12">
             <div class="card" id="card1" >
                 <div class="card-body">
-                    <p class="card-text">Full-Stack Developer living in Minnesota. I have completed a Full Stack Web Development Certificate through the University of Minnesota Continuing Education and Professional Studies program. I am looking for a remote job in web development. I like to travel and have lived in New Zealand and The Czech Republic. I also enjoy hiking and camping and would like to work remotely so I finally have time to get a dog. I enjoy new challenges and learning new technologies and skills. I have experience working remotely both solo and as a team. For more information on my background and skills please see my <a href ="ProfilePhotos/Bethany-Polovitz-2020.pdf" style="color: purple;">Resume</a>.</p>
+                    <p class="card-text">Full-Stack Developer living in Minnesota. I have completed a Full-Stack Web Development Certificate through the University of Minnesota Continuing Education and Professional Studies program. I am looking for a remote job in web development. I like to travel and have lived in New Zealand and The Czech Republic. I also enjoy hiking and camping and would like to work remotely so I finally have time to get a dog. I enjoy new challenges and learning new technologies and skills. I have experience working remotely both solo and as a team. For more information on my background and skills please see my <a href ="./ProfilePhotos/2020 - Bethany Polovitz - Resume .pdf" style="color: purple;">Resume</a>.</p>
                     <!-- <a href="#" class="card-link">Card link</a>
                   <a href="#" class="card-link">Another link</a> -->
                 </div>
@@ -45,11 +47,6 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 col-md-12 col-sm-12" id ="hidden">
-                <div class="card" id="photo2">
-                    <img src="./ProfilePhotos/iceland.jpg" class="card-img-top" alt="Iceland">
-                </div>
-            </div>
             <div class="col-lg-6 col-md-12 col-sm-12">
                 <div class="card" id="card2" >
                     <div class="card-body">
@@ -81,7 +78,7 @@
             <div class="card" id="card3" >
                 <h2>More Information:</h2>
                 <p>
-                    <a href="/portfolio.html" class="btn btn-outline-dark" role="button" aria-pressed="true">Go to Portfolio Page</a>
+                    <a href="portfolio.html" class="btn btn-outline-dark" role="button" aria-pressed="true">Go to Portfolio Page</a>
                   </p>
                 <p>
                   <a href="https://www.linkedin.com/in/bethany-polovitz-66b18859/" class="btn btn-outline-dark" role="button" aria-pressed="true">Go to Linkedin Page</a>
@@ -90,13 +87,18 @@
                   <a href="https://github.com/bpolo15" class="btn btn-outline-dark" role="button" aria-pressed="true">Go to GitHub Pages</a>
                 </p>
                 <p>
-                  <a href="ProfilePhotos/Bethany-Polovitz-2020.pdf" class="btn btn-outline-dark" role="button" aria-pressed="true">View Resume</a>
+                  <a href="./ProfilePhotos/2020 - Bethany Polovitz - Resume .pdf" class="btn btn-outline-dark" role="button" aria-pressed="true">View Resume</a>
                 </p>
             </div>
         </div>
         </div>
     </div>
-
+<footer>
+    <h5>Bethany Polovitz</h5>
+    <p><a href="https://www.linkedin.com/in/bethany-polovitz-66b18859/" style="color: black;">Linkedin Profile</a>
+        <a href="https://github.com/bpolo15" style="color: black;">- GitHub Page </a>
+    <a href ="./ProfilePhotos/2020 - Bethany Polovitz - Resume .pdf" style="color: black;">- Resume</a></p>
+</footer>
 
 </body>
 
