--- a/portfolio.html
+++ b/portfolio.html
@@ -1,172 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Slabo+27px&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Portfolio</title>
-  </head>
-  <body>
-    <nav
-      class="navbar navbar-light"
-      style="background-color: white;"
-    >
-      <a class="navbar-brand" href="index.html">
-        <img
-          src="https://scontent-msp1-1.xx.fbcdn.net/v/t1.0-9/20800246_10159258654275523_4812675337554308324_n.jpg?_nc_cat=106&_nc_sid=85a577&_nc_ohc=eijJIddL1xUAX8HowG6&_nc_ht=scontent-msp1-1.xx&oh=657ee9d7d63dc5756f059367b55c6f6d&oe=5EFEBF7C"
-          width="50"
-          height="50"
-          class="d-inline-block align-top rounded-circle"
-          alt="Picture"
-        />
-        <span style="color: black; font-size: 30px;">
-          Bethany Polovitz</span
-        >
-      </a>
-      <!--right side of navbar-->
-      <ul class="nav justify-content-end">
-        <li class="nav-item">
-          <a class="nav-link active" href="index.html">About Me</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="portfolio.html">Portfolio</a>
-        </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link" href="Contact.html">Contact</a>
-        </li> -->
-      </ul>
-    </nav>
-    <br />
-    <h2 style="color: black;">
-      Portfolio
-    </h2>
-    <div class = "container">
-      <div class="row">
-      <div class="card" style="width: 18rem;">
-        <img src="./ProfilePhotos/CouchParty.JPG" height="160px" class="card-img-top" alt="CouchParty" height="50%">
-        <!-- <div class="card-body"> -->
-          <h5 class="card-title" style="font-weight: bold;">CouchParty</h5>
-          <p class="card-text">This application allows you to vote on a movie or show, and chat in real time with your friends.</p>
-          <a href="https://github.com/bpolo15/couchparty" class="btn btn-dark">GitHub Page</a>
-          <a href="https://expo.io/@bpolo15/couchparty-native" class="btn btn-dark">Open Application</a>
-        <!-- </div> -->
-      </div>
-      <div class="card" style="width: 18rem;">
-        <img src="./ProfilePhotos/Travelist.JPG"  height="160px" class="card-img-top" alt="Travelist" >
-        <!-- <div class="card-body"> -->
-          <h5 class="card-title" style="font-weight: bold;">Travelist</h5>
-          <p class="card-text"> This application was created to be a place where the user can house all their travel ideas in one place. </p>
-          <a href="https://github.com/bpolo15/Travel_Wishlist" class="btn btn-dark">GitHub Page</a>
-          <a href="https://obscure-bayou-21974.herokuapp.com/" class="btn btn-dark">Open Application</a>
-        <!-- </div> -->
-      </div>
-      <div class="card" style="width: 18rem;">
-        <img src="./ProfilePhotos//CryptoTracking.JPG" height="160px" class="card-img-top" alt="CryptoTracking" >
-        <!-- <div class="card-body"> -->
-          <h5 class="card-title" style="font-weight: bold;">CryptoTracking</h5>
-          <p class="card-text"> This application allows the user keep track of their various crypto coins.</p>
-          <a href="https://github.com/bpolo15/CryptoTracking" class="btn btn-dark">GitHub Page</a>
-          <a href="https://bpolo15.github.io/CryptoTracking/" class="btn btn-dark">Open Application</a>
-        <!-- </div> -->
-      </div>
-    </div>
-    </div>
 
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style1.css" />
+  <title>Portfolio</title>
+</head>
 
+<body>
 
+  <div class="jumbotron"
+    style="background-image: url(./ProfilePhotos/lakebled2.jpg) ; background-size: cover; background-repeat: no-repeat; padding: 120px 32px; opacity: 0.75;">
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- <div class="container">
-      <div class="row">
-        <div class="col-lg-3 col-md-6 col-sm-12">
-          <div class="card" style="width: 18rem; background-color: white;">
-            <img src="./ProfilePhotos/Travelist.JPG" height="175px" class="card-img-top" alt="Travelist" />
-            <div class="card-body">
-              <h4 class="card-title" style="color: black;">Travelist</h4>
-              <p class="card-text" style="color: black;">
-                This application was created to be a place where the user can house all their travel ideas in one place. 
-              </p>
-              <a href="https://obscure-bayou-21974.herokuapp.com/" class="btn btn-outline-dark">Open Application</a>
-              <a href="https://github.com/bpolo15/Travel_Wishlist" class="btn btn-outline-dark">Open GitHub</a>
-            </div>
+    <h1 class="name"> <span style="color: white;"> Bethany
+        Polovitz</span></h1>
+    <p>Full-Stack Developer</p>
+    <p><a href="https://www.linkedin.com/in/bethany-polovitz-66b18859/" style="color: white;">Linkedin Profile</a>
+      <a href="https://github.com/bpolo15" style="color: white;">- GitHub Page </a>
+      <a href ="./ProfilePhotos/2020 - Bethany Polovitz - Resume .pdf" style="color: white;">- Resume</a>
+    </p>
+    <p>
+      <a href="index.html" class="btn btn-dark" role="button" aria-pressed="true">Go to Main Page</a></p>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 col-md-12 col-sm-12">
+        <div class="card" id="card4">
+          <div class="card-body">
+            <h3>CouchParty</h3>
+            <p class="card-text">Firebase application that allows users to create a poll, vote on a movie, and chat with
+              friends all in real time.</p>
+            <p>Tools used: React Native, Firebase, GiftedChat</p>
+            <a href="https://github.com/bpolo15/couchparty" class="card-link">Link to Github</a>
+            <a href="https://expo.io/@bpolo15/couchparty-native" class="card-link">Link to Application</a>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 col-sm-12">
-            <div class="card" style="width: 18rem; background-color: white;">
-              <img src="./ProfilePhotos/CryptoTracking.JPG" height="175px" class="card-img-top" alt="Note-Taker" />
-              <div class="card-body">
-                <h4 class="card-title" style="color: black;">CryptoTracking</h4>
-                <p class="card-text" style="color: black;">
-                  This application allows the user keep track of their various crypto coins.
-                </p>
-                <a href="https://bpolo15.github.io/CryptoTracking/" class="btn btn-outline-dark">Open Application</a>
-                <a href="https://github.com/bpolo15/CryptoTracking" class="btn btn-outline-dark">Open GitHub</a>
-              </div>
-            </div>
-          </div>
-          <div class = "row">
-        <div class="col-lg-3 col-md-6  col-sm-12">
-            <div class="card" style="width: 18rem; background-color: white;">
-              <img src="./ProfilePhotos/note-taker.JPG" height="175px" class="card-img-top" alt="Note-Taker" />
-              <div class="card-body">
-                <h4 class="card-title" style="color: black;">Note-Taker</h4>
-                <p class="card-text" style="color: black;">
-                  This application allows the user to create and delete notes.
-                </p>
-                <a href="https://vast-sands-89281.herokuapp.com/" class="btn btn-outline-dark">Open Application</a>
-                <a href="https://github.com/bpolo15/Note_Taker" class="btn btn-outline-dark">Open GitHub</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6  col-sm-12">
-            <div class="card" style="width: 18rem; background-color: white;">
-              <img src="./ProfilePhotos/CouchParty.JPG" height="175px" class="card-img-top" alt="dailyplanner" />
-              <div class="card-body">
-                <h4 class="card-title" style="color: black;">CouchParty</h4>
-                <p class="card-text" style="color: black;">
-                  This mobile application allows you to answer the question "What should we watch?" by allowing you to create a poll where all your friends can vote. After your vote, you can chat with your friends in real time during your show.
-                </p>
-                <a href=" https://expo.io/@bpolo15/couchparty-native" class="btn btn-outline-dark">Open Application</a>
-                <a href="https://github.com/bpolo15/couchparty" class="btn btn-outline-dark">Open GitHub</a>
-              </div>
-            </div>
-          </div>
+      </div>
+      <div class="col-lg-6 col-md-12 col-sm-12">
+        <div class="card" style="width: 25rem;" id="photo4">
+          <img src="./ProfilePhotos/CouchParty.JPG" class="card-img-top" alt="CouchParty">
+        </div>
       </div>
     </div>
-    </div> -->
-    <footer style="text-align: center;">Contact Me: bethany.polovitz@gmail.com</footer>
-  </body>
+    <div class="row">
+      <div class="col-lg-6 col-md-12 col-sm-12">
+        <div class="card" id="card5">
+          <div class="card-body">
+            <h3>Travelist</h3>
+            <p class="card-text">Full-Stack Application that allows users to plan their dream vacation by saving
+              destination and activity ideas.</p>
+            <p>Tools used: HTML5, CSS3, JavaScript, JQuery, Node.js, Express, Sequelize, MySQL, Bcrypt, Passport</p>
+            <a href="https://github.com/bpolo15/Travel_Wishlist" class="card-link">Link to Github</a>
+            <a href="https://obscure-bayou-21974.herokuapp.com/" class="card-link">Link to Application</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6 col-md-12 col-sm-12">
+        <div class="card" id="photo5">
+          <img src="./ProfilePhotos/Travelist.JPG" class="card-img-top" alt="Travelist">
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-6 col-md-12 col-sm-12">
+        <div class="card" id="card6">
+          <div class="card-body">
+            <h3>CryptoTracking</h3>
+            <p class="card-text">Front-end application that allows users search and save cryptocurrenices and receive
+              news updates.</p>
+            <p>Tools used: HTML5, CSS3, JavaScript, JQuery, Brave New Coin API, News API</p>
+            <a href="https://github.com/bpolo15/CryptoTracking" class="card-link">Link to Github</a>
+            <a href="https://bpolo15.github.io/CryptoTracking/" class="card-link">Link to Application</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6 col-md-12 col-sm-12">
+        <div class="card" id="photo5">
+          <img src="./ProfilePhotos/CryptoTracking.JPG" class="card-img-top" alt="Travelist">
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer>
+    <h5>Bethany Polovitz</h5>
+    <p><a href="https://www.linkedin.com/in/bethany-polovitz-66b18859/" style="color: black;">Linkedin Profile</a>
+      <a href="https://github.com/bpolo15" style="color: black;">- GitHub Page </a>
+      <a href="./ProfilePhotos/2020 - Bethany Polovitz - Resume .pdf" style="color: black;">- Resume</a></p>
+  </footer>
+</body>
+
 </html>
