--- a/portfolio copy.html
+++ b/portfolio copy.html
@@ -26,7 +26,50 @@
     <p>
       <a href="index.html" class="btn btn-dark" role="button" aria-pressed="true">Go to Main Page</a></p>
   </div>
-  <div class="container">
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <div class="card col-lg-6 col-md-6 col-sm-6" id="card8">
+          <div class="card-body ">
+            <h3>CouchParty</h3>
+            <p class="card-text">Firebase application that allows users to create a poll, vote on a movie, and chat with
+              friends all in real time.</p>
+            <p>Tools used: React Native, Firebase, GiftedChat</p>
+            <a href="https://github.com/bpolo15/couchparty" class="card-link">Link to Github</a>
+            <a href="https://expo.io/@bpolo15/couchparty-native" class="card-link">Link to Application</a>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-6">
+          <div class="card" style="width: 25rem;" id="photo8">
+            <img src="./ProfilePhotos/CouchParty.JPG" class="card-img-top" alt="CouchParty">
+          </div>
+
+      </div>
+      <div class="carousel-item">
+        <img src="..." class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="..." class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+
+
+
+  <!-- <div class="container">
     <div class="row">
       <div class="col-lg-6 col-md-12 col-sm-12">
         <div class="card" id="card4">
@@ -69,24 +112,6 @@
       <div class="col-lg-6 col-md-12 col-sm-12">
         <div class="card" id="card6">
           <div class="card-body">
-            <h3>Xplore Space</h3>
-            <p class="card-text">Front-end educational application that allows users to view near earth objects, view the weather on Mars, see future rocket launches, and view NASA's photo of the day. </p>
-            <p>Tools used: HTML5, CSS3, JavaScript, JQuery, NASA Open APIs (APOD, Astroids NeoWs, Insight) and Launch Library API.</p>
-            <a href="https://github.com/bpolo15/XploreSpace" class="card-link">Link to Github</a>
-            <a href="https://bpolo15.github.io/XploreSpace/" class="card-link">Link to Application</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-6 col-md-12 col-sm-12">
-        <div class="card" id="photo6">
-          <img src="./ProfilePhotos/MainPageReadMe.JPG" class="card-img-top" alt="XploreSpace">
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-6 col-md-12 col-sm-12">
-        <div class="card" id="card6">
-          <div class="card-body">
             <h3>CryptoTracking</h3>
             <p class="card-text">Front-end application that allows users search and save cryptocurrenices and receive
               news updates.</p>
@@ -98,11 +123,11 @@
       </div>
       <div class="col-lg-6 col-md-12 col-sm-12">
         <div class="card" id="photo5">
-          <img src="./ProfilePhotos/CryptoTracking.JPG" class="card-img-top" alt="CryptoTracking">
+          <img src="./ProfilePhotos/CryptoTracking.JPG" class="card-img-top" alt="Travelist">
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <footer>
     <h5>Bethany Polovitz</h5>
     <p><a href="https://www.linkedin.com/in/bethany-polovitz-66b18859/" style="color: black;">Linkedin Profile</a>
