--- a/indexcopy.html
+++ b/indexcopy.html
@@ -7,24 +7,24 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="style2.css">
 
     <title>Bethany Polovitz</title>
 </head>
 
 <body>
     <div class="jumbotron"
-        style="background-image: url(./ProfilePhotos/rome.jpg) ; background-size: cover; background-repeat: no-repeat; padding: 120px 32px; opacity: 0.75;">
+        style="background-image: url(./ProfilePhotos/rome.jpg) ; background-size: cover; background-repeat: no-repeat; padding: 150px 32px; opacity: 0.75;">
 
         <h1 class="name"> <span style="color: white;"> Bethany
                 Polovitz</span></h1>
-                <p>Full-Stack Developer</p>
+                <!-- <p>Full-Stack Developer</p>
                 <p><a href="https://www.linkedin.com/in/bethany-polovitz-66b18859/" style="color: white;">Linkedin Profile</a>
                 <a href="https://github.com/bpolo15" style="color: white;">- GitHub Page </a>
-                <a href ="./ProfilePhotos/Bethany.Polovitz.Resume.2020.pdf" style="color: white;">- Resume</a>
+                <a href ="./ProfilePhotos/2020 - Bethany Polovitz - Resume .pdf" style="color: white;">- Resume</a>
             </p>
             <p>
-                <a href="portfolio.html" class="btn btn-dark" role="button" aria-pressed="true">Go to Portfolio</a></p>
+                <a href="portfolio.html" class="btn btn-dark" role="button" aria-pressed="true">Go to Portfolio</a></p> -->
     </div>
     <div class="container">
         <div class="row">
@@ -36,7 +36,7 @@
             <div class="col-lg-6 col-md-12 col-sm-12">
             <div class="card" id="card1" >
                 <div class="card-body">
-                    <p class="card-text">Full-Stack Developer living in Minnesota. I have completed a Full-Stack Web Development Certificate through the University of Minnesota Continuing Education and Professional Studies program. I am looking for a remote job in web development. I like to travel and have lived in New Zealand and The Czech Republic. I also enjoy hiking and camping and would like to work remotely so I have time to explore the world. I enjoy new challenges and learning new technologies and skills. I have experience working remotely both solo and as a team. For more information on my background and skills please see my <a href ="./ProfilePhotos/Bethany.Polovitz.Resume.2020.pdf" style="color: purple;">Resume</a>.</p>
+                    <p class="card-text">Full-Stack Developer living in Minnesota. I have completed a Full-Stack Web Development Certificate through the University of Minnesota Continuing Education and Professional Studies program. I am looking for a remote job in web development. I like to travel and have lived in New Zealand and The Czech Republic. I also enjoy hiking and camping and would like to work remotely so I have time to explore the world. I enjoy new challenges and learning new technologies and skills. I have experience working remotely both solo and as a team. For more information on my background and skills please see my <a href ="./ProfilePhotos/2020 - Bethany Polovitz - Resume .pdf" style="color: purple;">Resume</a>.</p>
                     <!-- <a href="#" class="card-link">Card link</a>
                   <a href="#" class="card-link">Another link</a> -->
                 </div>
@@ -87,7 +87,7 @@
                   <a href="https://github.com/bpolo15" class="btn btn-outline-dark" role="button" aria-pressed="true">Go to GitHub Pages</a>
                 </p>
                 <p>
-                  <a href="./ProfilePhotos/Bethany.Polovitz.Resume.2020.pdf" class="btn btn-outline-dark" role="button" aria-pressed="true">View Resume</a>
+                  <a href="./ProfilePhotos/2020 - Bethany Polovitz - Resume .pdf" class="btn btn-outline-dark" role="button" aria-pressed="true">View Resume</a>
                 </p>
             </div>
         </div>
@@ -97,7 +97,7 @@
     <h5>Bethany Polovitz</h5>
     <p><a href="https://www.linkedin.com/in/bethany-polovitz-66b18859/" style="color: black;">Linkedin Profile</a>
         <a href="https://github.com/bpolo15" style="color: black;">- GitHub Page </a>
-    <a href ="./ProfilePhotos/Bethany.Polovitz.Resume.2020.pdf" style="color: black;">- Resume</a></p>
+    <a href ="./ProfilePhotos/2020 - Bethany Polovitz - Resume .pdf" style="color: black;">- Resume</a></p>
 </footer>
 
 </body>
