--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     <p>Full-Stack Developer</p>
     <p><a href="https://www.linkedin.com/in/bethany-polovitz-66b18859/" style="color: white;">Linkedin Profile</a>
       <a href="https://github.com/bpolo15" style="color: white;">- GitHub Page </a>
-      <a href ="./ProfilePhotos/2020 - Bethany Polovitz - Resume .pdf" style="color: white;">- Resume</a>
+      <a href ="./ProfilePhotos/Bethany.Polovitz.Resume.2020.pdf" style="color: white;">- Resume</a>
     </p>
     <p>
       <a href="index.html" class="btn btn-dark" role="button" aria-pressed="true">Go to Main Page</a></p>
@@ -107,8 +107,10 @@
     <h5>Bethany Polovitz</h5>
     <p><a href="https://www.linkedin.com/in/bethany-polovitz-66b18859/" style="color: black;">Linkedin Profile</a>
       <a href="https://github.com/bpolo15" style="color: black;">- GitHub Page </a>
-      <a href="./ProfilePhotos/2020 - Bethany Polovitz - Resume .pdf" style="color: black;">- Resume</a></p>
+      <a href="./ProfilePhotos/Bethany.Polovitz.Resume.2020.pdf" style="color: black;">- Resume</a></p>
   </footer>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script src="./scripts.js"></script>
 </body>
 
 </html>
